Fixed timelines overlapping container by adding left margin to push them to the right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,6 +332,7 @@ ul.nav a:hover {
 
 .history-items {
   margin-bottom: 30px;
+  margin-left: 30px;
 }
 
 .timeline-item {
